apply plugin: 'java-library'

sourceCompatibility = JavaVersion.VERSION_1_8
targetCompatibility = JavaVersion.VERSION_1_8

dependencies {
  implementation fileTree(dir: 'libs', include: ['*.jar'])
  annotationProcessor 'com.google.auto.service:auto-service:1.0-rc4'
  compileOnly 'com.google.auto.service:auto-service:1.0-rc4'
  compileOnly files(org.gradle.internal.jvm.Jvm.current().getToolsJar())
  implementation 'com.google.auto:auto-common:0.10'
  implementation 'com.squareup:javapoet:1.11.1'
  implementation 'net.ltgt.gradle.incap:incap:0.2'
  annotationProcessor 'net.ltgt.gradle.incap:incap-processor:0.2'
  testImplementation 'junit:junit:4.12'
}

apply from: rootProject.file('gradle/gradle-mvn-push.gradle')
